<resources>
    <string name="app_name">Geo Bangla</string>
    <string name="dhaka">Dhaka</string>
    <string name="barishal">Barishal</string>
    <string name="chittagong">Chittagong</string>
    <string name="khulna">Khulna</string>
    <string name="mymensingh">Mymensingh</string>
    <string name="rajshahi">Rajshahi</string>
    <string name="rangpur">Rangpur</string>
    <string name="sylhet">Sylhet</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="search">Explore</string>
    <string name="profile">Profile</string>
    <string name="credits">Credits</string>
    <string name="test_desc">Dhaka is the capital city of Bangladesh, in southern Asia. Set beside the Buriganga River, it’s at the center of national government, trade and culture. The 17th-century old city was the Mughal capital of Bengal, and many palaces and mosques remain. American architect Louis Khan’s National Parliament House complex typifies the huge, fast-growing modern metropolis.</string>
    <string name="test_desc2">The area of Dhaka has been inhabited since the first millennium. The city rose to prominence in the 17th century as a provincial capital and commercial center of the Mughal Empire in South Asia. Dhaka was the capital of Mughal Bengal for 75 years. As the center of the muslin trade in Bengal, it was one of the most prosperous cities in the Indian subcontinent. The medieval city was named in honor of the Mughal Emperor Jahangir and hosted the seat of the Mughal Subahdar (governor), Naib Nazims and Dewans (prime ministers).</string>
    <string name="test_desc3">Medieval Dhaka\'s glory peaked in the 17th and 18th centuries, when it was home to merchants from across Eurasia. The Mughals decorated the city with well-laid out gardens, tombs, mosques, palaces and forts. The city was once called the Venice of the East. Under the British Empire, the city saw the introduction of electricity, railways, cinemas, Western-style universities and colleges and a modern water supply. It became an important administrative and educational center in Eastern Bengal and Assam after 1905. In 1947, after ending of British rule, it became the administrative capital of the East Pakistan. It was declared as the legislative capital of Pakistan in 1962. In 1971, it became the capital of an independent Bangladesh. Article 5 of the Constitution of Bangladesh declares Dhaka as the capital of the republic.</string>
    <string name="lalbagh1">Lalbagh Fort (also Fort Aurangabad) is an incomplete 17th century Mughal fort complex that stands before the Buriganga River in the southwestern part of Dhaka, Bangladesh. The construction was started in 1678 AD by Mughal Subahdar Muhammad Azam Shah who was son of Emperor Aurangzeb and later emperor himself. His successor, Shaista Khan, did not continue the work, though he stayed in Dhaka up to 1688. The fort was never completed, and unoccupied for a long period of time. Much of the complex was built over and now sits across from modern buildings.</string>
    <string name="lalbagh2">The Mughal prince Muhammad Azam, third son of Aurangzeb started the work of the fort in 1678 during his vice-royalty in Bengal. He stayed in Bengal for 15 months. The fort remained incomplete when he was called away by his father Aurangzeb. Shaista Khan was the new subahdar of Dhaka in that time, and he did not complete the fort. In 1684, the daughter of Shaista Khan named Iran Dukht Pari Bibi died there. After her death, he started to think the fort as unlucky, and left the structure incomplete.Among the three major parts of Lalbagh Fort, one is the tomb of Pari Bibi.</string>
    <string name="lalbagh3">After Shaista Khan left Dhaka, it lost its popularity. The main cause was that the capital was moved from Dhaka to Murshidabad. After the end of the royal Mughal period, the fort became abandoned. In 1844, the area acquired its name as Lalbagh replacing Aurangabad, and the fort became Lalbagh Fort.</string>
    <string name="credit">Coded with 💙 by Tanqir</string>
</resources>
